# Geometry

./: .buildinfo  .gitignore  LICENSE  README.md  credits.txt  genindex.html  geometry.html  geometry.shapes.html  geometry.utilities.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: ci-pipeline.yml  deploy-docs.yml
_sources/: index.rst.txt
docs/: conf.py  geometry.rst  geometry.shapes.rst  geometry.utilities.rst
examples/: example.py
geometry/: collection.py  segment.py  vertice.py
geometry/shapes/: polygon.py  rectangle.py
geometry/utilities/: utils.py
scripts/: setup.sh
tests/geometry/: test_collection.py  test_segment.py  test_vertice.py
tests/geometry/shapes/: test_polygon.py  test_rectangle.py
