[metadata]
name = Geometry
version = 0.1
description = Un ensemble de fonctions de géométrie
long_description = file: README.md
long_description_content_type = text/markdown
author = Mourtaza Akil
author_email = tazaakil67@gmail.com
license = Apache License 2.0
license_file = LICENSE
platforms = any
url = https://github.com/Taza67/Geometry/

[options]
packages = find:
install_requires =
    numpy
    opencv-python
    largestinteriorrectangle

[options.packages.find]
include = geometry
exclude = tests